tests/fixtures/invalid/pow_dict_none_str.py
# Cannot call pow() with Dict[str, int], None, Str
x = pow({"a": 1}, None, "hello")
